# BlockByteClient

./: .gitignore  Cargo.toml  item.bbmodel  player.bbmodel  run_gen_assets.sh
.github/workflows/: build.yml
assets/: content.json  player.bbmodel  stand.bbmodel
blockbench/: blockbyteexporter.js
src/: game.rs  glwrappers.rs  gui.rs  main.rs  missing.bbm  missing.bbmodel  missing_block.bbmodel  model.rs  util.rs
src/shaders/: basic.frag  block_breaking.vert  chunk.frag  chunk.vert  gui.frag  gui.vert  model.frag  model.vert  outline.frag  outline.vert  particle.frag  particle.vert  sky.frag  sky.vert
