[package]
name = "block_byte"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
sdl2 = {version = "0.35", features = ["image"]}
imagine = "0.0.5"
ultraviolet = "0.9.0"
enum-iterator = "1.3.0"
texture_packer = { version = "0.25.0"}
image = { version = "0.24.1", features = ["png"] }
png = "0.17.7"
rand = "0.8.5"
tungstenite = "*"
url = "2.3.1"
endio = "0.1.0"
json = "0.12.4"
uuid = {version = "1.3.0", features = ["v4","fast-rng","macro-diagnostics"]}
libflate = "1.3.0"
discord-rich-presence = "0.2.3"
rustc-hash = "1.1.0"
hashbrown = "0.13"
alto = "3.0.4"
hound = "3.5.0"